REGRESSION: editing/pasteboard/dataTransfer-setData-getData.html fails on Mac platforms. https://bugs.webkit.org/show_bug.cgi?id=82497 <rdar://problem/11140334>

Reviewed by Brady Eidson.

The revision causing this regression fixed the way data is written to the pasteboard for NSURLPboardType.
This change fixes the way data is read from the pasteboard for the same pasteboard type.

No new tests. Fixes the existing one that fails.

* platform/mac/ClipboardMac.mm:
(WebCore::absoluteURLsFromPasteboard):
* platform/mac/PlatformPasteboardMac.mm:
(WebCore::PlatformPasteboard::stringForType):



Canonical link: https://commits.webkit.org/99881@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112473 268f45cc-cd09-0410-ab3c-d52691b4dbfc